--- a/Map Test NEW.sozi.html
+++ b/Map Test NEW.sozi.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Untitled</title>
+        <title>Xavier's College Map</title>
         <style>
             body {
                 position: absolute;
