--- a/Map Test NEW.sozi.html
+++ b/Map Test NEW.sozi.html
@@ -74,7 +74,7 @@
             }
 
             .sozi-blank-screen {
-                background: black;
+                background: #cb9d06;
                 position: absolute;
                 top: 0;
                 left: 0;
